Minor update to jupyter notebook

--- a/ETL_Mini_Project_Starter_Code_AGrimm.ipynb
+++ b/ETL_Mini_Project_Starter_Code_AGrimm.ipynb
@@ -1501,7 +1501,12 @@
    "source": [
     "# Convert the goal and pledged columns to a `float` data type.\n",
     "campaign_df = campaign_df.astype({'goal': 'float', 'pledged': 'float'})\n",
-    "campaign_df.head()"
+    "\n",
+    "# Altervative method (Credit to Fekadu)\n",
+    "# campaign_df['goal'] = campaign_df['goal'].astype(\"float\")\n",
+    "# campaign_df['pledged'] = campaign_df['pledged'].astype(\"float\")\n",
+    "\n",
+    "campaign_df.head() "
    ]
   },
   {
